fix overflowY issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro&display=swap');
-body, html {
-  margin: 0;
-  padding: 0;
+html {
+  overflow: hidden;
+  height: 100%;
 }
-
 body {
   color: #333;
   margin: 0;
+  height: 100%;
+  overflow: auto;
 }
 
 a {
@@ -46,7 +47,7 @@ a {
 }
 
 .background {
-  background-image: url(../src/static/bg2.png);
+  background-image: url(../src/static/bg.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 100% 100%;
